@@ -26,11 +26,13 @@ dnl ******************************************
 dnl ** pkg-config dependacy checks          **
 dnl ******************************************
 
+GLIB_REQUIRED=2.7.0
 LIBGNOMEUI_REQUIRED=2.6.0
 GTK_REQUIRED=2.7.0
 LIBGLADE_REQUIRED=2.0.0
 
 PKG_CHECK_MODULES(BUOH, 
+		  glib-2.0       >= $GLIB_REQUIRED
 		  libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED 
 		  gtk+-2.0       >= $GTK_REQUIRED 
 		  libglade-2.0   >= $LIBGLADE_REQUIRED) 
