@@ -25,64 +25,10 @@
 
 #include <glib.h>
 #include <glib/gi18n.h>
-#include <glib/gstdio.h>
 #include <libgnome/libgnome.h>
 #include <libgnomeui/libgnomeui.h>
-#include <libxml/tree.h>
-#include <libxml/encoding.h>
-#include <libxml/xmlwriter.h>
 
 #include "buoh.h"
-
-static gboolean create_datadir     (void);
-static gboolean create_comics_file (void);
-
-static gboolean
-create_datadir ()
-{
-	gchar *filename;
-
-	filename = g_build_filename (g_get_home_dir (), ".buoh", NULL);
-
-	if (! g_file_test (filename, G_FILE_TEST_IS_DIR)) {
-		if (g_mkdir (filename, 0755) != 0) {
-			g_free (filename);
-			return FALSE;
-		}
-	}
-
-	g_free (filename);
-	
-	return TRUE;
-}
-
-static gboolean
-create_comics_file ()
-{
-	xmlTextWriterPtr  writer;
-	gchar            *filename;
-	
-	filename = g_build_filename (g_get_home_dir (), ".buoh", "comics.xml", NULL);
-
-	if (! g_file_test (filename, G_FILE_TEST_EXISTS)) {
-		writer = xmlNewTextWriterFilename (filename, 0);
-
-		if (!writer) {
-			g_free (filename);
-			return FALSE;
-		}
-
-		xmlTextWriterStartDocument (writer, NULL, NULL, NULL);
-		xmlTextWriterStartElement (writer, BAD_CAST "comic_list");
-		xmlTextWriterEndElement (writer);
-		xmlTextWriterEndDocument (writer);
-		xmlFreeTextWriter (writer);
-	}
-
-	g_free (filename);
-
-	return TRUE;
-}
 
 gint
 main (gint argc, gchar **argv)
@@ -95,18 +41,6 @@ main (gint argc, gchar **argv)
 			    GNOME_PARAM_NONE);
 
 	g_set_application_name (_("Buoh Comics Reader"));
-
-	if (! create_datadir ()) {
-		g_error(_("Cannot create buoh directory\n"));
-
-		return 1;
-	}
-
-	if (! create_comics_file ()) {
-		g_error(_("Cannot create buoh comics file\n"));
-
-		return 1;
-	}
 
 	/* Init threads */
 	if (!g_thread_supported ()) {
